tests/parser/var_err15.mtp
(* variable section start *)

(*missing array*)
var test: (20) of integer;

begin

end
.
